# LogoHS

./: LICENSE  LogoHS.cabal  README.md  advanced.logo  stack.yaml
app/: Main.hs
src/: Ast.hs  Lib.hs  Parser.hs  Runtime.hs  Stdlib.hs  Types.hs
