name:                LogoHS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/korrix/LogoHS#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          korrix@gmail.com
copyright:           2017 Konrad Lewandowski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ast
                     , Parser
                     , Runtime
                     , Stdlib
                     , Types

  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , megaparsec
                     , containers
                     , scientific
                     , text
                     , unordered-containers
                     , mtl
                     , xturtle
                     , microlens
                     , microlens-th
                     , microlens-mtl

  default-language:    Haskell2010

executable LogoHS
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LogoHS
  default-language:    Haskell2010

test-suite LogoHS-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LogoHS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/korrix/LogoHS
